--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,19 +7,36 @@ on:
     branches: [ main ]
 
 jobs:
-
   build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
+    strategy:
+      matrix:
+        go-version: [1.16.x, 1.17]
+        platform: [ubuntu-latest, macos-latest, windows-latest]
 
-    - name: Set up Go
+    runs-on: ${{ matrix.platform }}
+    steps:
+    - name: Install Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.17
+        go-version: ${{ matrix.go-vesion }}
+
+    - name: Checkout code
+      uses: actions/checkout@v2
 
     - name: Build
       run: go build -v ./...
 
     - name: Test
-      run: go test -v .
+      run: go test -v -cover .
+
+    - name: Vet
+      run: go vet .
+    
+    - name: Linter
+      uses: golangci/golangci-lint-action@v2
+      with:
+        version: latest
+        only-new-issues: true
+        skip-go-installation: true
+        skip-pkg-cache: true
+        skip-build-cache: true
