--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install Go
       uses: actions/setup-go@v2
       with:
-        go-version: ${{ matrix.go-vesion }}
+        go-version: ${{ matrix.go-version }}
 
     - name: Checkout code
       uses: actions/checkout@v2
